# autogen

./: .aider.chat.history-cli_snake_game.md  .aider.chat.history-cli_snake_game_coder.md  .aider.chat.history-cli_snake_game_codex.md  .aider.chat.history-cli_snake_game_creator.md  .env  .gitignore  404.html  CONTRIBUTORS.md  Dockerfile  OAI_CONFIG_LIST_sample  README.md  TRANSPARENCY_FAQS.md  env  index.html  main.py  search-index.json  setup.py  sitemap.xml
autogen/: browser_utils.py  code_utils.py  serper_utils.py  token_count_utils.py
blog/: atom.xml  index.html  rss.xml
dotnet/: README.md
notebook/: JSON_mode_example.ipynb  agentchat_MathChat.ipynb  agentchat_RetrieveChat.ipynb  agentchat_RetrieveChat_couchbase.ipynb  agentchat_RetrieveChat_mongodb.ipynb  agentchat_RetrieveChat_qdrant.ipynb  (+30 more)
samples/apps/autogen-studio/: .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml
samples/apps/autogen-studio/autogenstudio/: __init__.py  agenthelperservice.py  agentservice.py  chatmanager.py  cli.py  codingassistanceservice.py  datamodel.py  repositoryservice.py  session_context.py  version.py  websurferservice.py  workflowmanager.py  zapierservice.py
samples/apps/autogen-studio/autogenstudio/database/migrations/: env.py
samples/apps/autogen-studio/autogenstudio/utils/: dbdefaults.json  dbutils.py  utils.py
samples/apps/autogen-studio/autogenstudio/web/: app.py  serve.py
samples/apps/autogen-studio/autogenstudio/web/ui/: 29107295-d7ab907db44a741f6a3a.js  29107295-d7ab907db44a741f6a3a.js.map  318ce576f236b79fd96f75904c13f6e55c3eee57-3b4fa81576e6f35ec148.js  355a6ca7-f1ce5186745955d3dd30.js  355a6ca7-f1ce5186745955d3dd30.js.map  404.html  595-d9aedc1e498360668e56.js  595-d9aedc1e498360668e56.js.LICENSE.txt  app-20bafaf6c0277963dcd4.js  app-20bafaf6c0277963dcd4.js.map  chunk-map.json  component---src-pages-build-tsx-a292ea6160c5a6d2c318.js  component---src-pages-build-tsx-a292ea6160c5a6d2c318.js.map  component---src-pages-gallery-index-tsx-344212810229cbe2960a.js  component---src-pages-gallery-index-tsx-344212810229cbe2960a.js.map  component---src-pages-index-tsx-69195ea776c0a0225fff.js  component---src-pages-index-tsx-69195ea776c0a0225fff.js.map  framework-cac843a6fec86b8bc39a.js.map  index.html  styles.6e785f6e31390b1618df.css  webpack-runtime-b68cd34dea048790ddd9.js  webpack-runtime-b68cd34dea048790ddd9.js.map  webpack.stats.json
samples/apps/autogen-studio/autogenstudio/web/ui/404/: index.html
samples/apps/autogen-studio/autogenstudio/web/ui/gallery/: index.html
samples/apps/autogen-studio/autogenstudio/web/ui/page-data/: app-data.json
samples/apps/autogen-studio/autogenstudio/web/ui/page-data/gallery/: page-data.json
samples/apps/autogen-studio/autogenstudio/web/ui/page-data/index/: page-data.json
samples/apps/autogen-studio/frontend/: gatsby-config.ts  package.json
samples/apps/autogen-studio/frontend/src/components/: atoms.tsx  footer.tsx  icons.tsx  types.ts  utils.ts
samples/apps/autogen-studio/frontend/src/components/views/builder/: agents.tsx  build.tsx  groups.tsx  models.tsx  skills.tsx
samples/apps/autogen-studio/frontend/src/components/views/builder/utils/: export.tsx
samples/apps/autogen-studio/frontend/src/styles/: global.css
samples/apps/autogen-studio/notebooks/: agent_spec.json  groupchat_spec.json  tutorial.ipynb
samples/apps/autogen-studio/test/: test_save_skills_to_file.py  test_skills_prompt.py
(+802 files in other folders)
