[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "superdappstudio"
authors = [
  { name="SuperDapp Team", email="info@superdapp.ai" },
]
description = "SuperDapp Studio"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "pydantic",
    "fastapi",
    "typer",
    "uvicorn",
    "arxiv",
    "pyautogen>=0.2.15",
    "chromadb",
    "sentence_transformers",
    "beautifulsoup4", 
    "markdownify", 
    "pdfminer.six", 
    "pathvalidate",
    "youtube_transcript_api",
    "networkx", 
    "matplotlib",
    "yfinance",
    "websockets"
]
optional-dependencies = {web = ["fastapi", "uvicorn"]}

dynamic = ["version"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = {attr = "autogenstudio.version.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
include = ["autogenstudio*"]
exclude = ["*.tests*"]
namespaces = false

[tool.setuptools.package-data]
"autogenstudio" = ["*.*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]


[project.urls]
"Homepage" = "https://github.com/sidhujag/autogen"
"Bug Tracker" = "https://github.com/sidhujag/autogen/issues"

[project.scripts]
autogenstudio = "autogenstudio.cli:run"
