[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "superdappstudio"
authors = [
  { name="AutoGen Team", email="autogen@microsoft.com" },
  { name="Superdapp Team", email="contact@superdapp.ai" },
]
description = "Superdapp Studio"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


dependencies = [
    "pydantic",
    "fastapi",
    "typer",
    "uvicorn",
    "arxiv",
    "autogen-agentchat[gemini,anthropic,mistral]==0.2.38",
    "python-dotenv",
    "websockets",
    "numpy < 2.0.0",
    "sqlmodel",
    "psycopg",
    "alembic",
    "loguru",
]
optional-dependencies = {web = ["fastapi", "uvicorn"], database = ["psycopg"]}

dynamic = ["version"]

[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = {attr = "superdappstudio.version.VERSION"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
include = ["superdappstudio*"]
exclude = ["*.tests*"]
namespaces = false

[tool.setuptools.package-data]
"superdappstudio" = ["*.*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Deprecated call to `pkg_resources\\.declare_namespace\\('.*'\\):DeprecationWarning",
    "ignore::DeprecationWarning:google.rpc",
]


[project.urls]
"Homepage" = "https://github.com/superdapp/superdappstudio"
"Bug Tracker" = "https://github.com/superdapp/superdappstudio/issues"

[project.scripts]
superdappstudio = "superdappstudio.cli:run"
